<resources>
    <string name="app_name">Calculator</string>
    <string name="ln">ln</string>
    <string name="equal">=</string>
    <string name="divide">÷</string>
    <string name="dot">.</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="log">log</string>
    <string name="_6">6</string>
    <string name="min">-</string>
    <string name="c">C</string>
    <string name="mul">×</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="plus">+</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="x">xⁿ</string>
    <string name="root">√</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
</resources>